--- a/package.json
+++ b/package.json
@@ -6,15 +6,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate:types": "npx prisma generate",
+    "postinstall": "npm run generate:types"
   },
   "dependencies": {
+    "@aws-crypto/sha256-js": "^5.2.0",
+    "@aws-sdk/client-s3": "^3.787.0",
+    "@aws-sdk/credential-provider-node": "^3.787.0",
+    "@aws-sdk/lib-storage": "^3.787.0",
+    "@aws-sdk/types": "^3.775.0",
+    "@prisma/client": "^5.10.2",
     "@temporalio/client": "^1.11.7",
     "axios": "^1.8.4",
     "nanoid": "^5.1.5",
     "next": "15.3.1",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
+    "prisma": "^5.10.2",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0",
     "react": "^19.0.0",
